Added gui test, improved BE